add new table for test and add customer get_list method and work with tables and test it

--- a/New_version/templates/IT/Product_list/index.html
+++ b/New_version/templates/IT/Product_list/index.html
@@ -50,17 +50,9 @@
                                                                             <div class="dropdown-menu dropdown-menu-end">
                                                                                 <ul class="link-list-opt no-bdr">
                                                                                     <li>
-                                                                                        <a href="#"><em class="icon ni ni-edit"></em><span>ویرایش انتخاب شده</span></a>
+                                                                                        <a href="#"><em class="icon ni ni-edit"></em><span>آپدیت محصولات</span></a>
                                                                                     </li>
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-trash"></em><span>حذف انتخاب شده</span></a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-bar-c"></em><span>به روز رسانی موجودی</span></a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-invest"></em><span>به روز رسانی قیمت</span></a>
-                                                                                    </li>
+
                                                                                 </ul>
                                                                             </div>
                                                                         </div>
@@ -91,31 +83,7 @@
                                                                 <span class="tb-sub">{{i[8]}}</span>
                                                             </div>
 
-                                                            <div class="nk-tb-col nk-tb-col-tools">
-                                                                <ul class="nk-tb-actions gx-1 my-n1">
-                                                                    <li class="me-n1">
-                                                                        <div class="dropdown">
-                                                                            <a href="#" class="dropdown-toggle btn btn-icon btn-trigger" data-bs-toggle="dropdown"><em class="icon ni ni-more-h"></em></a>
-                                                                            <div class="dropdown-menu dropdown-menu-end">
-                                                                                <ul class="link-list-opt no-bdr">
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-edit"></em><span>ویرایش محصول</span></a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-eye"></em><span>مشاهده محصول</span></a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-activity-round"></em><span>سفارشات محصول</span></a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#"><em class="icon ni ni-trash"></em><span>حذف محصول</span></a>
-                                                                                    </li>
-                                                                                </ul>
-                                                                            </div>
-                                                                        </div>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>
+
                                                         </div>
                                                         {%endfor%}
                                                         <!-- .nk-tb-item -->
