creat py file in it/update_data for get updated customer data from wordpres

--- a/New_version/templates/IT/Customer/index.html
+++ b/New_version/templates/IT/Customer/index.html
@@ -39,7 +39,7 @@
                                                             <div class="nk-tb-col"><span>تلفن</span></div>
                                                             <div class="nk-tb-col"><span>آخرین فعالیت</span></div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span>شهر</span>
+                                                                <span>کدملی</span>
                                                             </div>
 
                                                             <div class="nk-tb-col nk-tb-col-tools">
@@ -50,7 +50,7 @@
                                                                             <div class="dropdown-menu dropdown-menu-end">
                                                                                 <ul class="link-list-opt no-bdr">
                                                                                     <li>
-                                                                                        <a href="#"><em class="icon ni ni-edit"></em><span>آپدیت مشتریان</span></a>
+                                                                                        <a href="/IT/Update_all_data_online_from_server"><em class="icon ni ni-edit"></em><span>آپدیت مشتریان</span></a>
                                                                                     </li>
 
                                                                                 </ul>
@@ -74,13 +74,13 @@
                                                                 <span class="tb-sub">{{i[1]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead">{{i[2]}}</span>
+                                                                <span class="tb-lead">{{i[3]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[6]}}</span>
+                                                                <span class="tb-sub">{{i[8]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[8]}}</span>
+                                                                <span class="tb-sub">{{i[13]}}</span>
                                                             </div>
 
                                                         </div>
