--- a/New_version/templates/IT/Product_list/index.html
+++ b/New_version/templates/IT/Product_list/index.html
@@ -39,7 +39,7 @@
                                                             <div class="nk-tb-col"><span>قیمت</span></div>
                                                             <div class="nk-tb-col"><span>موجودی</span></div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span>دسته بندی</span>
+                                                                <span>فروخته شده در کل</span>
                                                             </div>
 
                                                             <div class="nk-tb-col nk-tb-col-tools">
@@ -50,7 +50,7 @@
                                                                             <div class="dropdown-menu dropdown-menu-end">
                                                                                 <ul class="link-list-opt no-bdr">
                                                                                     <li>
-                                                                                        <a href="#"><em class="icon ni ni-edit"></em><span>آپدیت محصولات</span></a>
+                                                                                        <a href="/IT/Update_all_data_online_from_server"><em class="icon ni ni-edit"></em><span>آپدیت محصولات</span></a>
                                                                                     </li>
 
                                                                                 </ul>
@@ -67,20 +67,20 @@
                                                             <div class="nk-tb-col tb-col-sm">
                                                                 <span class="tb-product">
                                                                     <img src="./images/product/a.png" alt="" class="thumb" />
-                                                                    <span class="title">{{i[1]}}</span>
+                                                                    <span class="title">{{i[2]}}</span>
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
                                                                 <span class="tb-sub">{{i[1]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-lead">{{i[4]}}</span>
+                                                                <span class="tb-lead">{{i[5]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[11]}}</span>
+                                                                <span class="tb-sub">{{i[9]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col tb-col-md">
-                                                                <span class="tb-sub">{{i[8]}}</span>
+                                                                <span class="tb-sub">{{i[12]}}</span>
                                                             </div>
 
 
