creat some methode for pre invoice and work on preinvoice in it section and do it

--- a/New_version/templates/IT/Customer/index_G.html
+++ b/New_version/templates/IT/Customer/index_G.html
@@ -8,7 +8,7 @@
                                     <div class="nk-block-head nk-block-head-sm">
                                         <div class="nk-block-between">
                                             <div class="nk-block-head-content">
-                                                <h3 class="nk-block-title page-title">مشتریان</h3>
+                                                <h3 class="nk-block-title page-title">مشرتیان غیر</h3>
                                             </div>
                                             <!-- .nk-block-head-content -->
                                             <div class="nk-block-head-content">
@@ -50,7 +50,7 @@
                                                                             <div class="dropdown-menu dropdown-menu-end">
                                                                                 <ul class="link-list-opt no-bdr">
                                                                                     <li>
-                                                                                        <a href="/IT/Update_all_data_online_from_server"><em class="icon ni ni-edit"></em><span>آپدیت مشتریان</span></a>
+                                                                                        <a href="/IT/ADD_Customers_G"><em class="icon ni ni-edit"></em><span>اضافه کردن مشتریان</span></a>
                                                                                     </li>
 
                                                                                 </ul>
@@ -71,7 +71,7 @@
                                                                 </span>
                                                             </div>
                                                             <div class="nk-tb-col">
-                                                                <span class="tb-sub">{{i[1]}}</span>
+                                                                <span class="tb-sub">{{i[0]}}</span>
                                                             </div>
                                                             <div class="nk-tb-col">
                                                                 <span class="tb-lead">{{i[3]}}</span>
@@ -185,7 +185,7 @@
 {% endblock %}
 
 {% block menu %}
-                         <div class="nk-sidebar-content">
+      <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -273,6 +273,7 @@
                             <!-- .nk-sidebar-menu -->
                         </div>
 {% endblock %}
+
 {% block notification %}
                         <li class="dropdown notification-dropdown me-n1">
                                             <a href="#" class="dropdown-toggle nk-quick-nav-icon" data-bs-toggle="dropdown">
