--- a/New_version/templates/IT/Product_list/index.html
+++ b/New_version/templates/IT/Product_list/index.html
@@ -186,7 +186,7 @@
 {% endblock %}
 
 {% block menu %}
-                        <div class="nk-sidebar-content">
+                           <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -231,9 +231,11 @@
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان</span></a>
+                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان سایت</span></a>
                                             </li>
-
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Customers_G" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان غیر</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
@@ -272,6 +274,7 @@
                             <!-- .nk-sidebar-menu -->
                         </div>
 {% endblock %}
+
 {% block notification %}
                         <li class="dropdown notification-dropdown me-n1">
                                             <a href="#" class="dropdown-toggle nk-quick-nav-icon" data-bs-toggle="dropdown">
