--- a/New_version/templates/IT/index.html
+++ b/New_version/templates/IT/index.html
@@ -416,9 +416,11 @@
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان</span></a>
+                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان سایت</span></a>
                                             </li>
-
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Customers_G" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان غیر</span></a>
+                                            </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
