--- a/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
@@ -67,21 +67,14 @@
                                             <!-- .col -->
                                             <div class="col-xxl-8">
 
-                                            <form class="form-group" method="get" action="/SA/add_preinvoice_finall_insert">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="default-01">شماره پیش فاکتور داخلی</label>
-                                                    <div class="form-control-wrap">
-                                                        <input type="text" class="form-control" name="private_id_num" value="{{private_id_num}}" placeholder="شماره فاکتور داخلی">
-                                                    </div>
-                                                </div>
-                                                <hr>
+                                            <form class="form-group" method="get" action="/IT/Pre_invoice_add_products">
                                                 <div class="form-group">
                                                     <label class="form-label" data-search="on">انتخاب مشتری</label>
                                                         <div class="form-control-wrap" data-search="on">
-                                                            <select class="form-select" data-search="on" name="customer">
+                                                            <select class="form-select" data-search="on" name="ID_C">
                                                                     {%for i in list_costumers%}
                                                                         <option id="C_{{i[0]}}" value="{{i[0]}}">
-                                                                            {{i[1]}}
+                                                                            {{i[4]}}
                                                                         </option>
                                                                     {%endfor%}
                                                             </select>
@@ -89,16 +82,16 @@
 
                                                 </div>
                                                 <div class="form-group">
-                                                    <label class="form-label" data-search="on" id="C_name">اسم کامل : {{list_costumers[0][1]}}</label>
+                                                    <label class="form-label" data-search="on" id="C_name">اسم کامل مشتری : </label>
                                                     <br>
-                                                     <label class="form-label" data-search="on" id="C_Natnaiol_id">کد اقتصادی : {{list_costumers[0][2]}}</label>
+                                                    <label class="form-label" data-search="on" id="C_id_economy"> کد پستی : </label>
                                                     <br>
-                                                    <label class="form-label" data-search="on" id="C_Phone">شماره تلفن : {{list_costumers[0][8]}}</label>
+                                                   <label class="form-label" data-search="on" id="C_phone_number">شماره تلفن :</label>
                                                     <br>
-                                                    <label class="form-label" data-search="on" id="C_address">آدرس : {{list_costumers[0][4]}}</label>
+                                                   <label class="form-label" data-search="on" id="C_address">آدرس : </label>
                                                 </div>
                                                 <hr>
-                                                {%for i in list_products%}
+                                                <!--
                                                 <div id="product_addabel">
                                                     <div class="row g-gs">
                                                         <div class="col-xxl-4">
@@ -106,7 +99,8 @@
                                                             <label class="form-label" data-search="on">انتخاب کالا</label>
                                                                 <div class="form-control-wrap" data-search="on">
                                                                     <select class="form-select" data-search="on" name="product[]">
-                                                                        <option value="{{i[0]}}">{{i[1]}}</option>
+                                                                        <option>x</option>
+                                                                        <option>y</option>
                                                                     </select>
                                                                 </div>
 
@@ -116,29 +110,29 @@
                                                             <div class="form-group">
                                                             <label class="form-label" data-search="on">انتخاب تعداد</label>
                                                                 <div class="form-control-wrap" data-search="on">
-                                                                    <input type="text" class="form-control" value="{{i[7]}}" name="product_number[]" placeholder="تعداد : ">
+                                                                    <input type="text" class="form-control" name="private_id_num" placeholder="تعداد : ">
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-xxl-4">
                                                             <div class="form-group">
-                                                                    <label class="form-label" data-search="on">توضیحات : {{i[4]}}</label>
+                                                                    <label class="form-label" data-search="on">اسم کامل محصول : </label>
                                                                     <br>
-                                                                    <label class="form-label" data-search="on">کد محصول : {{i[0]}}</label>
+                                                                    <label class="form-label" data-search="on"> کد محصول : </label>
                                                                     <br>
-                                                                   <label class="form-label" data-search="on">قیمت محصول : {{i[2]}}</label>
+                                                                   <label class="form-label" data-search="on">قیمت محصول :</label>
                                                                     <br>
-                                                                   <label class="form-label" data-search="on">تعداد موجود در انبار : {{i[3]}}</label>
+                                                                   <label class="form-label" data-search="on">تعداد موجود : </label>
                                                            </div>
-                                                            <hr>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                {%endfor%}
+                                                <input class="btn btn-icon  btn-white btn-dim btn-success" type="button" value="اضافه کردن محصول" onclick="add_product()">
+                                                <input class="btn btn-icon  btn-white btn-dim btn-warning" type="button" value="دوباره" onclick="remove_product()">
+                                                -->
                                                 <br>
-                                                <hr>
 
-                                                <input class="btn btn-success" type="submit" value="ثبت" >
+                                                <input class="btn btn-success" type="submit" value="مرحله بعد" >
                                             </form>
                                                 <!-- .card -->
                                             </div>
@@ -310,6 +304,50 @@
 {% endblock %}
 {% block script %}
     <script>
+
+
+        const product_addabel = document.getElementById("product_addabel");
+        var product_addabel_befor = product_addabel.innerHTML;
+        function remove_product(){
+            product_addabel.innerHTML = product_addabel_befor;
+        }
+        function add_product() {
+
+            product_addabel.innerHTML += `<div class="row g-gs">
+                                                        <div class="col-xxl-4">
+                                                            <div class="form-group">
+                                                            <label class="form-label" data-search="on">انتخاب کالا</label>
+                                                                <div class="form-control-wrap" data-search="on">
+                                                                    <select class="form-select" data-search="on" name="product[]">
+                                                                        <option>x</option>
+                                                                        <option>y</option>
+                                                                    </select>
+                                                                </div>
+
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xxl-4">
+                                                            <div class="form-group">
+                                                            <label class="form-label" data-search="on">انتخاب تعداد</label>
+                                                                <div class="form-control-wrap" data-search="on">
+                                                                    <input type="text" class="form-control" name="private_id_num" placeholder="تعداد : ">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-xxl-4">
+                                                        <hr>
+                                                            <div class="form-group">
+                                                                    <label class="form-label" data-search="on">اسم کامل محصول : </label>
+                                                                    <br>
+                                                                    <label class="form-label" data-search="on"> کد محصول : </label>
+                                                                    <br>
+                                                                   <label class="form-label" data-search="on">قیمت محصول :</label>
+                                                                    <br>
+                                                                   <label class="form-label" data-search="on">تعداد موجود : </label>
+                                                           </div>
+                                                        </div>
+                                                    </div>`;
+        }
 
 
 
