--- a/New_version/templates/IT/Pre_invoice/Pre_invoice_add_products.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_invoice_add_products.html
@@ -67,47 +67,37 @@
                                             <!-- .col -->
                                             <div class="col-xxl-8">
 
-                                            <form class="form-group" method="get" action="/SA/add_preinvoice_products">
-                                                <div class="form-group">
-                                                    <label class="form-label" for="default-01">شماره پیش فاکتور داخلی</label>
-                                                    <div class="form-control-wrap">
-                                                        <input type="text" class="form-control" name="private_id_num" placeholder="شماره فاکتور داخلی">
-                                                    </div>
-                                                </div>
-                                                <hr>
-                                                <div class="form-group">
-                                                    <label class="form-label" data-search="on">انتخاب مشتری</label>
-                                                        <div class="form-control-wrap" data-search="on">
-                                                            <select class="form-select" data-search="on" name="customer">
-                                                                    {%for i in list_costumers%}
-                                                                        <option id="C_{{i[0]}}" value="{{i[0]}}">
-                                                                            {{i[1]}}
-                                                                        </option>
-                                                                    {%endfor%}
-                                                            </select>
-                                                    </div>
+                                            <form class="form-group" method="get" action="/SA/add_preinvoice_finall">
 
-                                                </div>
                                                 <div class="form-group">
-                                                    <label class="form-label" data-search="on" id="C_name">اسم کامل مشتری : </label>
+                                                    <label class="form-label" data-search="on" id="C_name1"><h3>اطلاعات مشتری</h3></label>
                                                     <br>
-                                                    <label class="form-label" data-search="on" id="C_id_economy"> کد اقتصادی : </label>
+                                                    <input type="hidden" name="ID_C" value="{{ID_C}}">
+                                                    <label class="form-label" data-search="on" id="C_name">اسم کامل : {{list_costumers[0][5]}}</label>
                                                     <br>
-                                                   <label class="form-label" data-search="on" id="C_phone_number">شماره تلفن :</label>
+                                                     <label class="form-label" data-search="on" id="C_Natnaiol_id">کد پستی : {{list_costumers[0][10]}}</label>
                                                     <br>
-                                                   <label class="form-label" data-search="on" id="C_address">آدرس : </label>
+                                                    <label class="form-label" data-search="on" id="C_Phone">شماره تلفن : {{list_costumers[0][3]}}</label>
+                                                    <br>
+                                                    <label class="form-label" data-search="on" id="C_address">آدرس : {{list_costumers[0][14]}}</label>
                                                 </div>
                                                 <hr>
-                                                <!--
+
                                                 <div id="product_addabel">
+                                                    <label class="form-label" data-search="on" id="C_name12"><h3>اطلاعات کالا</h3></label><br>
                                                     <div class="row g-gs">
+
+
                                                         <div class="col-xxl-4">
+
                                                             <div class="form-group">
+
                                                             <label class="form-label" data-search="on">انتخاب کالا</label>
                                                                 <div class="form-control-wrap" data-search="on">
                                                                     <select class="form-select" data-search="on" name="product[]">
-                                                                        <option>x</option>
-                                                                        <option>y</option>
+                                                                        {%for i in list_product%}
+                                                                        <option value="{{i[0]}}">{{i[2]}}</option>
+                                                                        {%endfor%}
                                                                     </select>
                                                                 </div>
 
@@ -117,7 +107,7 @@
                                                             <div class="form-group">
                                                             <label class="form-label" data-search="on">انتخاب تعداد</label>
                                                                 <div class="form-control-wrap" data-search="on">
-                                                                    <input type="text" class="form-control" name="private_id_num" placeholder="تعداد : ">
+                                                                    <input type="text" class="form-control" name="product_number[]" placeholder="تعداد : ">
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -136,8 +126,9 @@
                                                 </div>
                                                 <input class="btn btn-icon  btn-white btn-dim btn-success" type="button" value="اضافه کردن محصول" onclick="add_product()">
                                                 <input class="btn btn-icon  btn-white btn-dim btn-warning" type="button" value="دوباره" onclick="remove_product()">
-                                                -->
+
                                                 <br>
+                                                <hr>
 
                                                 <input class="btn btn-success" type="submit" value="مرحله بعد" >
                                             </form>
@@ -159,52 +150,81 @@
 </div>
 {% endblock %}
 {% block menu %}
-                       <div class="nk-sidebar-content">
+                      <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
                                     <!-- .nk-menu-item -->
                                     <li class="nk-menu-heading">
                                         <h6 class="overline-title text-primary-alt">
-                                            تست می باشد
+                                            منو
                                         </h6>
                                     </li>
                                     <!-- .nk-menu-heading -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/SA/preinvoice" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
                                             <span class="nk-menu-text">فاکتور ها</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/SA/preinvoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/IT/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/SA/invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
+                                                <a href="/IT/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
-
-                                    <!-- .nk-menu-item -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/SA/list_costumer" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/Product_list" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb "></em></span>
+                                            <span class="nk-menu-text">محصولات</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Product_list" class="nk-menu-link"><span class="nk-menu-text">لیست محصولات</span></a>
+                                            </li>
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/IT/Customers" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-user-list"></em></span>
                                             <span class="nk-menu-text">مشتریان</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/SA/list_costumer" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان</span></a>
+                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان سایت</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/SA/list_costumer_vip" class="nk-menu-link"><span class="nk-menu-text">مشتریان ویژه</span></a>
+                                                <a href="/IT/Customers_G" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان غیر</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
                                     <!-- .nk-menu-item -->
 
+                                    <!-- .nk-menu-item -->
 
+                                    <!-- .nk-menu-item -->
+
+                                    <!-- .nk-menu-item -->
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/IT/Data_grab_DG" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
+                                            <span class="nk-menu-text">جمع آوری دیتا</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Data_grab_TO" class="nk-menu-link"><span class="nk-menu-text">ترب</span></a>
+                                            </li>
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Data_grab_DG" class="nk-menu-link"><span class="nk-menu-text">دیجیکالا</span></a>
+                                            </li>
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
 
                                     <!-- .nk-menu-item -->
 
@@ -326,8 +346,9 @@
                                                             <label class="form-label" data-search="on">انتخاب کالا</label>
                                                                 <div class="form-control-wrap" data-search="on">
                                                                     <select class="form-select" data-search="on" name="product[]">
-                                                                        <option>x</option>
-                                                                        <option>y</option>
+                                                                        {%for i in list_product%}
+                                                                        <option value="{{i[0]}}">{{i[2]}}</option>
+                                                                        {%endfor%}
                                                                     </select>
                                                                 </div>
 
@@ -337,7 +358,7 @@
                                                             <div class="form-group">
                                                             <label class="form-label" data-search="on">انتخاب تعداد</label>
                                                                 <div class="form-control-wrap" data-search="on">
-                                                                    <input type="text" class="form-control" name="private_id_num" placeholder="تعداد : ">
+                                                                    <input type="text" class="form-control" name="product_number[]" placeholder="تعداد : ">
                                                                 </div>
                                                             </div>
                                                         </div>
