creat method and file for add preinvoice for IT section and find some bugs in update data from wordpres it was about ssl and work with sshuttle in my private pc

--- a/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
@@ -152,52 +152,81 @@
 </div>
 {% endblock %}
 {% block menu %}
-                       <div class="nk-sidebar-content">
+                        <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
                                     <!-- .nk-menu-item -->
                                     <li class="nk-menu-heading">
                                         <h6 class="overline-title text-primary-alt">
-                                            تست می باشد
+                                            منو
                                         </h6>
                                     </li>
                                     <!-- .nk-menu-heading -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/SA/preinvoice" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/Invoice" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-card-view"></em></span>
                                             <span class="nk-menu-text">فاکتور ها</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/SA/preinvoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
+                                                <a href="/IT/Pre_Invoice" class="nk-menu-link"><span class="nk-menu-text">پیش فاکتور</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/SA/invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
+                                                <a href="/IT/Invoice" class="nk-menu-link"><span class="nk-menu-text">فاکتور</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
-
-                                    <!-- .nk-menu-item -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/SA/list_costumer" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/Product_list" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-tile-thumb "></em></span>
+                                            <span class="nk-menu-text">محصولات</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Product_list" class="nk-menu-link"><span class="nk-menu-text">لیست محصولات</span></a>
+                                            </li>
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/IT/Customers" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-user-list"></em></span>
                                             <span class="nk-menu-text">مشتریان</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/SA/list_costumer" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان</span></a>
+                                                <a href="/IT/Customers" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان سایت</span></a>
                                             </li>
                                             <li class="nk-menu-item">
-                                                <a href="/SA/list_costumer_vip" class="nk-menu-link"><span class="nk-menu-text">مشتریان ویژه</span></a>
+                                                <a href="/IT/Customers_G" class="nk-menu-link"><span class="nk-menu-text">لیست مشتریان غیر</span></a>
                                             </li>
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
                                     <!-- .nk-menu-item -->
 
+                                    <!-- .nk-menu-item -->
 
+                                    <!-- .nk-menu-item -->
+
+                                    <!-- .nk-menu-item -->
+                                    <li class="nk-menu-item has-sub">
+                                        <a href="/IT/Data_grab_DG" class="nk-menu-link nk-menu-toggle">
+                                            <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
+                                            <span class="nk-menu-text">جمع آوری دیتا</span>
+                                        </a>
+                                        <ul class="nk-menu-sub">
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Data_grab_TO" class="nk-menu-link"><span class="nk-menu-text">ترب</span></a>
+                                            </li>
+                                            <li class="nk-menu-item">
+                                                <a href="/IT/Data_grab_DG" class="nk-menu-link"><span class="nk-menu-text">دیجیکالا</span></a>
+                                            </li>
+                                        </ul>
+                                        <!-- .nk-menu-sub -->
+                                    </li>
 
                                     <!-- .nk-menu-item -->
 
