create getdata_and_avrage_data_from_dgkala_torob_emalls and

--- a/New_version/templates/IT/Customer/Add_customer_G.html
+++ b/New_version/templates/IT/Customer/Add_customer_G.html
@@ -223,17 +223,15 @@
 
                                     <!-- .nk-menu-item -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Data_grab_DG" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/getdata" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
                                             <span class="nk-menu-text">جمع آوری دیتا</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Data_grab_TO" class="nk-menu-link"><span class="nk-menu-text">ترب</span></a>
+                                                <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/Data_grab_DG" class="nk-menu-link"><span class="nk-menu-text">دیجیکالا</span></a>
-                                            </li>
+
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
