--- a/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
+++ b/New_version/templates/IT/Pre_invoice/Pre_Invoice_add_customer.html
@@ -152,7 +152,7 @@
 </div>
 {% endblock %}
 {% block menu %}
-                        <div class="nk-sidebar-content">
+                       <div class="nk-sidebar-content">
                             <div class="nk-sidebar-menu" data-simplebar>
                                 <ul class="nk-menu">
 
@@ -213,17 +213,15 @@
 
                                     <!-- .nk-menu-item -->
                                     <li class="nk-menu-item has-sub">
-                                        <a href="/IT/Data_grab_DG" class="nk-menu-link nk-menu-toggle">
+                                        <a href="/IT/getdata" class="nk-menu-link nk-menu-toggle">
                                             <span class="nk-menu-icon"><em class="icon ni ni-tranx"></em></span>
                                             <span class="nk-menu-text">جمع آوری دیتا</span>
                                         </a>
                                         <ul class="nk-menu-sub">
                                             <li class="nk-menu-item">
-                                                <a href="/IT/Data_grab_TO" class="nk-menu-link"><span class="nk-menu-text">ترب</span></a>
+                                                <a href="/IT/getdata" class="nk-menu-link"><span class="nk-menu-text">جمع آوری دیتا</span></a>
                                             </li>
-                                            <li class="nk-menu-item">
-                                                <a href="/IT/Data_grab_DG" class="nk-menu-link"><span class="nk-menu-text">دیجیکالا</span></a>
-                                            </li>
+
                                         </ul>
                                         <!-- .nk-menu-sub -->
                                     </li>
