add some think and i dont know what these are!

--- a/New_version/templates/IT/Get_data/index.html
+++ b/New_version/templates/IT/Get_data/index.html
@@ -18,6 +18,7 @@
                                                             <li class="nk-block-tools-opt">
                                                                 <a href="#" data-target="addProduct" class="toggle btn btn-icon btn-primary d-md-none"><em class="icon ni ni-plus"></em></a>
                                                                 <a href="#" data-target="addProduct" class="toggle btn btn-primary d-none d-md-inline-flex"><em class="icon ni ni-plus"></em><span>افزودن محصول</span></a>
+                                                                <a class="btn btn-icon btn-lg btn-white btn-dim btn-outline-primary" href="IT/print_getdata_sction" target="_blank"><em class="icon ni ni-printer-fill"></em></a>
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -29,6 +30,7 @@
                                     </div>
                                     <!-- .nk-block-head -->
                                     <div class="nk-block">
+
                                         <div class="card card-bordered">
                                             <div class="card-inner-group">
                                                 <div class="card-inner p-0">
